# ukrustacean

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
deploy/: .editorconfig  .gitignore  .terraform.lock.hcl  main.tf  output.tf  provision.sh  variables.tf
l10n/uk_UA/: main.ftl
src/: l10n.rs  main.rs
