[package]
name = "ukrustacean"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.61"
description = "Telegram Bot of Ukrainian Rust community."
authors = ["Kai Ren <tyranron@gmail.com>"]
license = "BlueOak-1.0.0"
publish = false

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
dptree = "0.2"
fluent-bundle = "0.15"
fluent-templates = "0.7"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
smallvec = "1.8"
teloxide = { version = "0.9", features = ["auto-send", "ctrlc_handler", "rustls"], default-features = false }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
unic-langid = "0.9"
